ui|doc: add som tooltip + fox some kb overflow issue.

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -16,7 +16,7 @@ $tooltip-color: white;
 $node-tooltip-background: $white-ter;
 //$node-tooltip-background: $grey-lighter;
 $node-tooltip-shadow: rgba(42, 70, 205, 0.5);
-$tooltip-transition-duration: 0.10s;
+$tooltip-transition-duration: 0.1s;
 
 // Modal
 $modal-background-background-color: rgba(black, 0.6);
